--- a/1.ipynb
+++ b/1.ipynb
@@ -39,8 +39,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 25,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -113,6 +115,103 @@
     "print(head)\n",
     "print(describe)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "شرح قسمت دوم :\n",
+    "خروجی اول مربوط به تابع info می باشد که نشان می دهد هر ستون چه type ای دارد و چه تعداد سطر در هر ستون دارای داده هست و همینطور که در خروجی معلوم است بعضی ستون ها از جمله Gender از نوع object می باشند و عدد نیستند.\n",
+    "حال برای اینکه بتوانیم از lable encoding استفاده کنیم چند روش وجود دارد که یکی از آن ها این است که dtype آن ستون را با استفاده از astype به category تغییر بدهیم و و سپس برای آن ستون با استفاده از cat.codes استفاده کنیم که برای حالت های مختلف آن ستون یک sequence برای ما می سازد که در خروجی دوم این بخش معلوم است که ستون Gender تبدیل به 0 برای Female و 1 برای male شده است.\n",
+    " حال که در انتها دوباره info را چاپ میکنیم نوع ستون Gender عددی شده است."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column                    Non-Null Count  Dtype  \n",
+      "---  ------                    --------------  -----  \n",
+      " 0   Unnamed: 0                1000 non-null   int64  \n",
+      " 1   Daily Time Spent on Site  907 non-null    float64\n",
+      " 2   Age                       979 non-null    float64\n",
+      " 3   Area Income               1000 non-null   float64\n",
+      " 4   Daily Internet Usage      913 non-null    float64\n",
+      " 5   Ad Topic Line             1000 non-null   object \n",
+      " 6   City                      1000 non-null   object \n",
+      " 7   Gender                    1000 non-null   object \n",
+      " 8   Country                   1000 non-null   object \n",
+      " 9   Timestamp                 1000 non-null   object \n",
+      " 10  Clicked on Ad             832 non-null    float64\n",
+      "dtypes: float64(5), int64(1), object(5)\n",
+      "memory usage: 86.1+ KB\n",
+      "None\n",
+      "0      0\n",
+      "1      1\n",
+      "2      0\n",
+      "3      1\n",
+      "4      0\n",
+      "      ..\n",
+      "995    1\n",
+      "996    1\n",
+      "997    1\n",
+      "998    0\n",
+      "999    0\n",
+      "Name: Gender, Length: 1000, dtype: int8\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column                    Non-Null Count  Dtype  \n",
+      "---  ------                    --------------  -----  \n",
+      " 0   Unnamed: 0                1000 non-null   int64  \n",
+      " 1   Daily Time Spent on Site  907 non-null    float64\n",
+      " 2   Age                       979 non-null    float64\n",
+      " 3   Area Income               1000 non-null   float64\n",
+      " 4   Daily Internet Usage      913 non-null    float64\n",
+      " 5   Ad Topic Line             1000 non-null   object \n",
+      " 6   City                      1000 non-null   object \n",
+      " 7   Gender                    1000 non-null   int8   \n",
+      " 8   Country                   1000 non-null   object \n",
+      " 9   Timestamp                 1000 non-null   object \n",
+      " 10  Clicked on Ad             832 non-null    float64\n",
+      "dtypes: float64(5), int64(1), int8(1), object(4)\n",
+      "memory usage: 79.2+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "info = dataframe.info()\n",
+    "print(info)\n",
+    "dataframe[\"Gender\"] = dataframe[\"Gender\"].astype('category')\n",
+    "dataframe[\"Gender\"] = dataframe[\"Gender\"].cat.codes\n",
+    "print(dataframe[\"Gender\"])\n",
+    "print(dataframe.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(dataframe.isnull)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
